# AWARE

./: .env.example  .gitignore  AGENTS.md  AWARE.md  README.md  preflight-check.md  pyproject.toml
aware/app/: config.py  main.py
aware/app/action/: bt_speaker.py  speaker.py
aware/app/core/: event_bus.py  loop.py
aware/app/llm/: interface.py  llama.py  stub.py
aware/app/mcu/: bus.py  mock.py  serial_mcu.py
aware/app/memory/: context.py  db.py  digest.py  query.py  sensors.py  summarizer.py  witness.py
aware/app/parser/: nl_parser.py  vocabulary.py
aware/app/perception/: interface.py  mock_camera.py  yamnet.py  yolo.py
aware/app/rules/: engine.py  store.py
aware/app/util/: timefmt.py
dashboard/: index.html
docs/: hardware-profile.md
docs/superpowers/specs/: 2026-07-18-aware-design.md  2026-07-18-dashboard-design.md  2026-07-19-memory-narration.md
scripts/: aware-bt-connect.service  aware-bt-connect.timer  aware.service  connect-bt.sh  deploy.sh  install-services.sh  llama-server.service  logs.sh  probe_router.py  restart.sh  seed-venue-demo.py  setup-piper.sh  test_modulinos.py  test_router_rpc.py
stm32_sketch/: aware_rgb_led.ino  stm32_sketch.ino
tests/: conftest.py  test_bt_speaker.py  test_context.py  test_digest.py  test_event_bus.py  test_integration.py  test_llm_stub.py  test_memory.py  test_parser.py  test_rules.py  test_sensor_cache.py  test_sensors.py  test_serial_mcu.py  test_serial_mcu_rpc.py  test_summarizer.py  test_witness.py
